exports[`test Input does forward props 1`] = `
<input
  disabled={false}
  foo="bar"
  onChange={[Function]}
  placeholder={undefined}
  value={undefined} />
`;

exports[`test Input does render 1`] = `
<input
  disabled={false}
  onChange={[Function]}
  placeholder={undefined}
  value={undefined} />
`;

exports[`test Input does render with a value 1`] = `
<input
  disabled={false}
  onChange={[Function]}
  placeholder={undefined}
  value="test" />
`;

exports[`test Input is disabled if there is no onChange func 1`] = `
<input
  disabled={true}
  placeholder={undefined}
  value={undefined} />
`;

exports[`test Input shows placeholder 1`] = `
<input
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder"
  value={undefined} />
`;

exports[`test Input shows placeholder with default value 1`] = `
<input
  disabled={false}
  onChange={[Function]}
  placeholder="Placeholder (default: DefaultValue)"
  value={undefined} />
`;

exports[`test Input takes defaultValue if disabled 1`] = `
<input
  disabled={true}
  placeholder=" (default: DefaultValue)"
  value="DefaultValue" />
`;

exports[`test Input takes name as placeholder if no placeholder given 1`] = `
<input
  disabled={false}
  name="Name"
  onChange={[Function]}
  placeholder="Name (default: DefaultValue)"
  value={undefined} />
`;

exports[`test Input takes only value if not disabled 1`] = `
<input
  disabled={true}
  placeholder=" (default: DefaultValue)"
  value="DefaultValue" />
`;

exports[`test Input takes type as placeholder if no placeholder & name given 1`] = `
<input
  disabled={false}
  onChange={[Function]}
  placeholder="Type (default: DefaultValue)"
  type="Type"
  value={undefined} />
`;
